--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ menu:
 menu_title: Configurable Title
 
 # URL of the Home page image
-index_cover: http://www.codeblocq.com/assets/projects/hexo-theme-clean-blog/img/home-bg.jpg
+index_cover: https://www.codeblocq.com/assets/projects/hexo-theme-clean-blog/img/home-bg.jpg
 
 # Default post title
 default_post_title: Untitled
